...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.databinding.basicsample.ui.MainActivity">

        <!-- Botón para Observable Fields Activity -->
        <Button
            android:id="@+id/observable_fields_activity_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/observable_fields_activity_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/observableactivity_activity_label"/>

        <!-- Botón para ViewModel Activity -->
        <Button
            android:id="@+id/viewmodel_activity_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/viewmodel_activity_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
...
